fix: adjusting quotation logic; feat: implementing basic pdf generation for quotation