@@ -8,6 +8,7 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -17,6 +18,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -26,16 +28,35 @@ public class SecurityConfiguration {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
-        return httpSecurity.cors(cors -> cors.configurationSource(corsConfigurationSource())).sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)).authorizeHttpRequests(authorize -> authorize.requestMatchers(HttpMethod.POST, "/api/v1/auth/login").permitAll().requestMatchers(HttpMethod.POST, "/api/v1/auth/register/admin").permitAll().requestMatchers(HttpMethod.POST, "/api/v1/auth/register/employee").permitAll().requestMatchers(HttpMethod.POST, "/api/v1/user/admin").hasRole("ADMIN").requestMatchers(HttpMethod.POST, "/api/v1/employee").hasRole("ADMIN").requestMatchers(HttpMethod.POST, "/api/v1/material").hasRole("ADMIN").requestMatchers(HttpMethod.GET, "/api/v1/material").hasRole("ADMIN").requestMatchers(HttpMethod.POST, "/api/v1/customer").hasRole("ADMIN").requestMatchers(HttpMethod.DELETE, "/api/v1/customer").hasRole("ADMIN").requestMatchers(HttpMethod.PUT, "/api/v1/customer").hasRole("ADMIN").requestMatchers(HttpMethod.GET, "/api/v1/customer").hasRole("ADMIN").requestMatchers(HttpMethod.POST, "/api/v1/quotation").hasRole("ADMIN").requestMatchers(HttpMethod.GET, "/api/v1/quotation").hasRole("ADMIN").requestMatchers(HttpMethod.POST, "/api/v1/material/marbleshop").hasRole("ADMIN").requestMatchers(HttpMethod.POST, "/api/v1/material/miscellaneous").hasRole("ADMIN").anyRequest().authenticated()).csrf(csrf -> csrf.disable()).addFilterBefore(securityFilter, UsernamePasswordAuthenticationFilter.class).build();
+        return httpSecurity.cors(cors -> cors.configurationSource(corsConfigurationSource())).sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)).authorizeHttpRequests(authorize ->
+                authorize.requestMatchers(HttpMethod.POST, "/api/v1/auth/login").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/v1/auth/register/admin").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/v1/auth/register/employee").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/v1/marbleshop/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/v1/marbleshop/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/v1/quotation/pdf/**").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/v1/user/admin").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.POST, "/api/v1/employee").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.POST, "/api/v1/material").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/v1/material").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.POST, "/api/v1/customer").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/api/v1/customer").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/api/v1/customer").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/v1/customer").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.POST, "/api/v1/quotation").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/v1/quotation").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.POST, "/api/v1/material/marbleshop").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.POST, "/api/v1/material/miscellaneous").hasRole("ADMIN")
+                        .anyRequest().authenticated()).csrf(AbstractHttpConfigurer::disable).addFilterBefore(securityFilter, UsernamePasswordAuthenticationFilter.class).build();
     }
 
     @Bean
     public UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
+        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
